fixed image on mobile and laptop size

--- a/src/components/UI/PostCard/PostCard.module.css
+++ b/src/components/UI/PostCard/PostCard.module.css
@@ -9,6 +9,7 @@
     0 10px 20px 0 #0000000a;
 }
 .article__image {
+  width: 100%;
   border-radius: 0.75rem 0.75rem 0 0;
 }
 
